# code-snippet

bash/: colored_string.bash
c/: CMakeLists.txt  Makefile  Makefile.cov  autotools.bash  cmake.bash  hello.c
cc/is_a__implement_by/: 1.cc  2.cc  3.cc  4.cc  5.cc  6.cc
debug/: Makefile  README.md  debug.h  debugtest.cc
doc/cheatsheets/: info.md  screen.md  tmux.md
doc/tips/: left_bracket.md  mkpasswd.md  to_txt.md
doc/topics/: C_and_CXX_Development.md
etc/: bashmy  gdbinit  infokey  screenrc  sudoers  tmux.conf  zshmy
etc/vim/: vimrc
glib/: Makefile  README  README.md  glib_debug.cc
glib/assert/: Makefile  README  glib_assert.cc
glib/asyncq/: Makefile  glib_asyncq.cc
glib/base64/: Makefile  README  glib_base64.cc
glib/checksum/: Makefile  README  glib_checksum.cc
glib/debug/: all_common.h
glib/hmac/: Makefile  README  glib_hmac.cc
glib/mainloop/: Makefile  glib_mainloop.cc
glib/string/: Makefile  README  glib_string.cc
glib/thread/: Makefile  glib_thread.cc
glib/threadpool/: Makefile  glib_threadpool.cc
glib/version/: Makefile  README  glib_version.cc
googletest/: README.md  make.bash
python/alpha_blend/: README.md  TODO.md
python/bottle/: README  bottle.pip  hello.py
python/django/: README
python/flask/: README  hello.py
python/httpd/: basic.css  hello_form.html  httpd.py  index.html  wsgihttpd.py
python/logging/: log.conf  logconf.py  logtest.py
scratch/: CMakeLists.txt  Makefile  all_3p.h  all_common.h  main.cc
tmp/: log.conf  main.py  testfoo.py
tmp/add/: README.md  add.py  index.html  index1.html
(+5 files in other folders)
